fixed modal css overlap

--- a/src/components/Animals/SPAGrid.css
+++ b/src/components/Animals/SPAGrid.css
@@ -1,11 +1,11 @@
 .grid-card {
+   
     width: 350px;
     text-align: center;
     background-color: whitesmoke;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 4px;
     margin-top: 50px;
-     z-index: 5;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,6 +14,7 @@
 }
 
 .grid {
+
     display: grid;
     justify-items: center;
     grid-template-columns: 1fr 1fr 1fr;
