--- a/src/components/UI/Modal.css
+++ b/src/components/UI/Modal.css
@@ -1,25 +1,27 @@
 .background {
-  position:absolute;
-  display: flex;
-  align-items: center;
-  justify-items: center;
+  position: absolute;
+  display: grid;
+  grid-column: 1/2;
+  grid-row: 1/2;
   justify-self: center;
-  align-content: center;
-  top: 0;
+  align-self: center;
+  z-index: 200;
+  width: 100%;
+  height: 100%;
   left: 0;
-     z-index: 200;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.65);
+  background-color: none;
   }
 
  
 
   .modalBox {
     z-index: 300;
-    display: flex;
-    position: absolute;
-    width: 50%;
+    display: grid;
+    grid-row: 1/2;
+    grid-column: 1/2;
+    justify-self: center;
+    align-self: center;
+    width: fit-content;
     background-color: white;
     padding: 1rem; 
     border-radius: 14px;
